feat(reference): shto endpoint-et për programet, lëndët dhe pedagogët
